--- a/app/templates/_index.html
+++ b/app/templates/_index.html
@@ -12,7 +12,7 @@
 
 	<!-- Popular libraries from Google CDN -->
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-	<script>window.jQuery || document.write('<script src="jquery.js"><\/script>'); // Fallback if CDN is down.</script>
+	<script>window.jQuery || document.write('<script src="js/jquery/jquery.min.js"><\/script>'); // Fallback if CDN is down.</script>
 
 	
 <!-- @if NODE_ENV == 'DEVELOPMENT' -->
@@ -23,10 +23,8 @@
 <!-- @endif -->
 
 <!-- @if NODE_ENV == 'PRODUCTION' -->
-	<!-- Bower library includes -->
-
-	<!-- Site specific javascript. -->
-	<script src="js/<%= siteName %>.js"></script>
+	<script src="js/libs.js"></script> <!-- Bower library includes -->
+	<script src="js/<%= _.slugify(siteName) %>.js"></script> <!-- Site specific javascript. -->
 <!-- @endif -->
 </body>
 </html>
