--- a/app/templates/_index.html
+++ b/app/templates/_index.html
@@ -14,19 +14,9 @@
 
 	<!-- Popular libraries from Google CDN -->
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-	<script>window.jQuery || document.write('<script src="js/jquery/jquery.min.js"><\/script>'); // Fallback if CDN is down.</script>
-
+	<script>window.jQuery || document.write('<script src="jquery.min.js"><\/script>'); // Fallback if CDN is down.</script>
 	
-<!-- @if NODE_ENV == 'DEVELOPMENT' -->
-	<!-- Bower library includes -->
-
-	<!-- Site specific javascript. -->
-
-<!-- @endif -->
-
-<!-- @if NODE_ENV == 'PRODUCTION' -->
-	<script src="js/libs.js"></script> <!-- Bower library includes -->
-	<script src="js/<%= _.slugify(siteName) %>.js"></script> <!-- Site specific javascript. -->
-<!-- @endif -->
+	<!-- Javascript packages -->
+    <script-package src="common.js" />
 </body>
 </html>
