--- a/app/templates/_index.html
+++ b/app/templates/_index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title><%= _.capitalize(siteName) %></title>
+    
+    <link rel="shortcut icon" href="favicon.ico">
 
 	<!-- Include development or production CSS, depending on build -->
 	<link rel="stylesheet" href="css/<%= _.slugify(siteName) %>.css">
