Added linting to created sites.
Fixed some files to pass linting.

--- a/app/templates/_index.html
+++ b/app/templates/_index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title><%= _.capitalize(siteName) %></title>
-    
+	<meta charset="utf-8">
     <link rel="shortcut icon" href="favicon.ico">
+    
+    <title><%= _.capitalize(siteName) %></title>
 
 	<!-- Include development or production CSS, depending on build -->
 	<link rel="stylesheet" href="css/<%= _.slugify(siteName) %>.css">
